src/test/contracts/negative/export_attr_const.jsligo
export /* @no_mutation */
const toto: D.titi = E.toto;
